--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gstreamer1.0 (1.12.2-1blankon2) uluwatu; urgency=medium
+
+  * Remove linux-any in depends
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Wed, 16 Aug 2017 13:06:56 +0800
+
 gstreamer1.0 (1.12.2-1blankon1) uluwatu; urgency=medium
 
   * New upstream release
